@@ -1,3 +1,8 @@
+Tue Oct  5 13:13:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * ciao/Deployment/Handlers/Connection_Handler.cpp:
+         Fixed typo's
+
 Tue Oct  5 12:22:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Deployment/Handlers/Connection_Handler.h:
